--- a/WebApplication1/bin/WebApplication1.dll.config
+++ b/WebApplication1/bin/WebApplication1.dll.config
@@ -7,6 +7,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+    
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
@@ -28,5 +29,15 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
         preCondition="managedHandler"/>
     </modules>
-  </system.webServer>
+          <httpProtocol>
+        <customHeaders>
+          <add name="Access-Control-Allow-Origin" value="*" />
+          <add name="Access-Control-Allow-Headers" value="Content-Type" />
+          <add name="Access-Control-Allow-Methods" value="GET,POST,PUT,DELETE,OPTIONS" />
+          <add name="Access-Control-Allow-Credentials" value="true" />
+        </customHeaders>
+      </httpProtocol>
+    </system.webServer>
+
+  
 </configuration>
